@@ -34,6 +34,8 @@ import org.apache.cayenne.project.FileProjectSaver;
 import org.apache.cayenne.project.ProjectModule;
 import org.apache.cayenne.project.ProjectSaver;
 import org.apache.cayenne.project.extension.ExtensionAwareHandlerFactory;
+import org.apache.cayenne.project.extension.info.InfoExtension;
+import org.apache.cayenne.project.extension.info.InfoExtension;
 
 /**
  * A DI module that bootstraps {@link DbImportAction}.
@@ -53,7 +55,9 @@ public class DbImportModule implements Module {
         binder.bind(DataChannelMetaData.class).to(DefaultDataChannelMetaData.class);
         binder.bind(HandlerFactory.class).to(ExtensionAwareHandlerFactory.class);
 
-        ProjectModule.extend(binder).addExtension(DbImportExtension.class);
+        ProjectModule.extend(binder)
+                .addExtension(DbImportExtension.class)
+                .addExtension(InfoExtension.class);
     }
 
 }
