@@ -31,5 +31,6 @@
     <obj-entity name="Parent" className="Parent" dbEntityName="PARENT">
         <obj-attribute name="col2" type="java.lang.String" db-attribute-path="COL2"/>
         <obj-attribute name="col4" type="java.lang.String" db-attribute-path="COL4"/>
+        <info:property xmlns:info="http://cayenne.apache.org/schema/10/info" name="comment" value="test"/>
     </obj-entity>
 </data-map>
